Update code to the latest build of the live bot.
Signed-off-by: KiriCattus <19393068+KiriCattus@users.noreply.github.com>